--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,12 @@
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
     "@mui/styled-engine-sc": "^5.8.0",
+    "axios": "^0.27.2",
     "query-string": "^7.1.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "6",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
